--- a/app/views/attempts/upload.html.erb
+++ b/app/views/attempts/upload.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Import Attempts</h1>
+<h1>Import Gradescope Attempts</h1>
+
+Use the "Export Evaluations" feature. School identifiers must match, and
+you must use a rubric of ✔, ✱, ⚠, then ✘.
 
 <%= render 'upload_form', attempt: @attempt %>
 
