fix issues mark on gradescope upload

--- a/app/views/attempts/upload.html.erb
+++ b/app/views/attempts/upload.html.erb
@@ -3,7 +3,7 @@
 <h1>Import Gradescope Attempts</h1>
 
 Use the "Export Evaluations" feature. School identifiers must match, and
-you must use a rubric of ✔, ✱, ⚠, then ✘.
+you must use a rubric of ✔, ✱, ⓘ, then ✘.
 
 <%= render 'upload_form', attempt: @attempt %>
 
