tweak link to provisional attempts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
         | <%= link_to "Standards", course_standards_path(@course) %>
      <br> <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
         | <%= link_to "Attempts", course_attempts_path(@course) %>
-        | <%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
+          <%= link_to "(Provisional)", index_recent_provisionals_course_attempts_path(@course) %>
         | <%= link_to "Exercises", course_exercises_path(@course) %>
           <%= link_to "(import)", import_course_exercises_path(@course) %>
         | <%= link_to "Assessments", course_assessments_path(@course) %>
