only show grade specs in progress report if grade specs exist

--- a/app/views/students/_progress.tex.erb
+++ b/app/views/students/_progress.tex.erb
@@ -25,6 +25,7 @@
   <% end %>
 <% end %>
 
+<% unless grade_specifications.empty? %>
 \vspace{1em}
 
 \begin{center}
@@ -62,3 +63,4 @@
     <% end %>
 \end{tabular}
 \end{center}
+<% end %>
