--- a/app/views/assessments/solutions.tex.erb
+++ b/app/views/assessments/solutions.tex.erb
@@ -1,66 +1,1 @@
-\documentclass[12pt]{article}
-
-\usepackage[letterpaper,margin=1in]{geometry}
-
-\setlength{\parindent}{0pt}
-\parskip=0.5em
-
-\usepackage{amssymb}
-\usepackage{amsmath}
-
-\usepackage{pgfplots}
-
-\usepackage{enumerate}
-
-\newcommand{\footerText}{
-  <%= @course.name %>
-}
-
-\newcommand{\headerText}{<%= @assessment.name %> -- Solutions}
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\renewcommand{\headrulewidth}{0pt}% Default \headrulewidth is 0.4pt
-\renewcommand{\footrulewidth}{0pt}% Default \footrulewidth is 0pt
-\chead{\footnotesize\bf\headerText}
-\cfoot{\footnotesize\footerText}
-
-
-\newcommand{\exercise}[3]{
-  \textbf{#1:} #2
-
-  \textit{Solution:} #3
-
-}
-
-<%= @assessment.tex_header %>
-
-
-
-
-\begin{document}
-
-<% @assessment.covered_standards.each do |covered_standard| %>
-
-\textbf{<%= covered_standard.standard.name %>}
-
-<% exercise_versions = covered_standard.exercise_versions %>
-<% if exercise_versions.length == 0 %>
-  No exercises available.
-<% else %>
-  <% exercise_versions.sort_by(&:id).each do |e| %>
-    \exercise{%
-      Version <%= e.id %>%
-    }{
-      <%= e.exercise.description.html_safe %>
-    }{
-      <%= e.exercise.solution.html_safe unless e.exercise.solution.nil? %>
-    }
-  <% end %>
-<% end %>
-
-\newpage
-
-<% end %>
-
-\end{document}
+<%= render "solutions.tex.erb" %>
