--- a/app/views/assessments/_print.tex.erb
+++ b/app/views/assessments/_print.tex.erb
@@ -17,13 +17,15 @@
   <%= @course.name %>
 }
 
-\newcommand{\headerText}{}
+\newcommand{\headerTextLeft}{}
+\newcommand{\headerTextRight}{}
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}% Default \headrulewidth is 0.4pt
 \renewcommand{\footrulewidth}{0pt}% Default \footrulewidth is 0pt
-\chead{\footnotesize\bf\headerText}
+\lhead{\footnotesize\bf\headerTextLeft}
+\rhead{\footnotesize\bf\headerTextRight}
 \cfoot{\footnotesize\footerText}
 
 
@@ -39,29 +41,37 @@
 
 \begin{document}
 
+<% if @print_long %>
+  \renewcommand{\headerTextRight}{<%= @assessment.name %> Template}
+  <% @assessment.standards.each_with_index do |s,i| %>
+    \exercise{<%= s.name %>}
+    \vfill
+    <% if i % 2 != 0 %>\newpage<% end %>
+  <% end %>
+  \newpage
+<% end %>
+
 <% @students.each do |student| %>
-\renewcommand{\headerText}{<%= @assessment.name %> -- <%=student.name%>}
+  \renewcommand{\headerTextLeft}{<%=student.name%>}
+  \renewcommand{\headerTextRight}{<%= @assessment.name %>}
 
-<%
-  student_exercise_versions = @exercise_versions.select do |e|
-    e.students.include?(student) && e.standard.unmastered_by_student?(student)
-  end
-%>
-
-  <% @exercise_versions.each do |e| %>
-    <% if e.students.include?(student) %>
-    <% if e.standard.unmastered_by_student?(student) %>
+  <% @assessment.standards.each_with_index do |s,i| %>
+    <% if s.unmastered_by_student?(student) %>
+      <% ev = @assessment.exercise_version_for_student(student,s) %>
       \exercise{%
-        <%= e.covered_standard.name %>
-        (version <%= e.id %>)%
+       <%= s.name %> %
+        (version <%= ev.id %>)%
       }{
-        <%= e.exercise.description.html_safe %>
+        <%= ev.exercise.description.html_safe %>
       }
     <% else %>
      \exercise{%
-       <%= e.covered_standard.name %>%
+       <%= s.name %>%
      }{\textit{You've already mastered this standard.}}
     <% end %>
+    <% if @print_long %>
+      \vfill
+      <% if i % 2 != 0 %>\newpage<% end %>
     <% end %>
   <% end %>
 
