don't show grade specs table if none exist

--- a/app/views/students/_progress.html.erb
+++ b/app/views/students/_progress.html.erb
@@ -30,6 +30,7 @@
   <% end %>
 <% end %>
 
+<% unless grade_specifications.empty? %>
 <table style="text-align:center;border:1px solid black;">
   <thead>
     <tr style="border:1px solid black;">
@@ -82,3 +83,4 @@
     <% end %>
   </tbody>
 </table>
+<% end %>
